<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".MainActivity"
        android:paddingBottom="100dp">

    <TextView
            android:id="@+id/enterText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enterHeader"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_margin="40dp"
            android:layout_centerHorizontal="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
            android:id="@+id/dataInputContainer"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:layout_constraintVertical_bias="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <TextView
                android:id="@+id/welcomeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcomeMessage"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_gravity="center" />

        <TextView
                android:id="@+id/someInfoText"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:text="@string/entryRequirements"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textAlignment="center" />

        <TextView
                android:id="@+id/errorMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="12sp"
                android:layout_margin="14dp"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textColor="@color/transparent" />

        <LinearLayout
                android:id="@+id/entries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

            <EditText
                    android:id="@+id/emailEditText"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:hint="@string/enterEmailHint"
                    android:textColorHint="@color/grey"
                    android:textSize="16sp"
                    android:background="@drawable/rounded_edittext"
                    android:padding="10dp"
                    android:textColor="@color/black" />

            <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:hint="@string/enterPasswordHint"
                    android:textColorHint="@color/grey"
                    android:textSize="16sp"
                    android:background="@drawable/rounded_edittext"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:inputType="textPassword" />

            <Button
                    android:id="@+id/signinButton"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:text="@string/signIn"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/grey" />

            <LinearLayout
                    android:id="@+id/recoverySection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center">

                <TextView
                        android:id="@+id/passwordRecoverText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forgotPasswordString"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:textSize="12sp"
                        android:textColor="@color/white" />

                <TextView
                        android:id="@+id/passwordRecoverLink"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forgotPasswordLink"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:textSize="12sp"
                        android:textColor="@color/orange" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
